kubernetes/kb-microservicios/deployment-ms-eventos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-eventos
  namespace: gestion-ep-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-eventos
  template:
    metadata:
      labels:
        app: ms-eventos
    spec:
      containers:
        - name: ms-eventos
          image: mcabrerac/ms-eventos:1.0
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "800Mi"
              cpu: "800m"

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

      restartPolicy: Always
