kubernetes/kb-microservicios/deployment-ms-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-gateway
  namespace: gestion-ep-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-gateway
  template:
    metadata:
      labels:
        app: ms-gateway
    spec:
      containers:
        - name: ms-gateway
          image: mcabrerac/ms-gateway:1.0
          ports:
            - containerPort: 9099
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9099
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9099
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

      restartPolicy: Always
