kubernetes/kb-microservicios/deployment-ms-participantes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-participantes
  namespace: gestion-ep-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-participantes
  template:
    metadata:
      labels:
        app: ms-participantes
    spec:
      containers:
        - name: ms-participantes
          image: mcabrerac/ms-participantes:1.0
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "800Mi"
              cpu: "800m"
