kubernetes/kb-microservicios/service-ms-eventos.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-eventos
  namespace: gestion-ep-dev
spec:
  selector:
    app: ms-eventos
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
  type: NodePort
