kubernetes/kb-microservicios/service-ms-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-gateway
  namespace: gestion-ep-dev
spec:
  selector:
    app: ms-gateway
  ports:
    - protocol: TCP
      port: 9099
      targetPort: 9099
      nodePort: 30099
  type: NodePort
