kubernetes/kb-microservicios/service-ms-participantes.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-participantes
  namespace: gestion-ep-dev
spec:
  selector:
    app: ms-participantes
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30082
  type: NodePort
